--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.1",
     "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
