--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgres://postgres:3c1g5b*FEgd-E6f*E5FeDg-f6-44D6fc@monorail.proxy.rlwy.net:14296/railway
+DATABASE_URL=postgresql://postgres:635ag4dce34AF46db12dD*6F-1ed-22b@roundhouse.proxy.rlwy.net:42556/railway
